// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmForm when all fields are empty then errors is displayed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="film-form"
      >
        <div
          class="modal-window__overlay"
        />
        <div
          class="modal-window"
        >
          <div
            class="modal-window__wrapper "
          >
            <h1
              class="modal-window__title"
            >
              Add film
            </h1>
            <button
              class="close-button modal-window__close large"
              type="button"
            >
              Close
            </button>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-title"
              >
                Title
                <input
                  id="film-title"
                  name="title"
                  type="text"
                  value=""
                />
              </label>
              <p
                class="labeled-input__error"
              >
                Title is required field
              </p>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-release"
              >
                Release date
                <input
                  id="film-release"
                  name="release_date"
                  type="date"
                  value=""
                />
              </label>
              <p
                class="labeled-input__error"
              >
                Release date is required field
              </p>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-url"
              >
                Movie url
                <input
                  id="film-url"
                  name="poster_path"
                  type="url"
                  value=""
                />
              </label>
              <p
                class="labeled-input__error"
              >
                Poster should be a valid url
              </p>
            </div>
            <label
              class="genres"
              for="genres"
            >
              genres
              <div
                class="go2139093995 multi-select"
              >
                <div
                  aria-expanded="false"
                  aria-readonly="true"
                  class="go2646822163 dropdown-container"
                  tabindex="0"
                >
                  <div
                    class="go2642161244 dropdown-heading"
                  >
                    <div
                      class="dropdown-heading-value"
                    >
                      <span
                        class="gray"
                      >
                        Select...
                      </span>
                    </div>
                    <svg
                      class="dropdown-heading-dropdown-arrow gray"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-width="2"
                      width="24"
                    >
                      <path
                        d="M6 9L12 15 18 9"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <p
                class="genres__error"
              >
                genres field must have at least 1 items
              </p>
            </label>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-overview"
              >
                Overview
                <input
                  id="film-overview"
                  name="overview"
                  type="text"
                  value=""
                />
              </label>
              <p
                class="labeled-input__error"
              >
                Film description is required
              </p>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-runtime"
              >
                Runtime
                <input
                  id="film-runtime"
                  name="runtime"
                  type="number"
                  value=""
                />
              </label>
              <p
                class="labeled-input__error"
              >
                Runtime should be numeric value more then 0
              </p>
            </div>
            <div
              class="film-form__actions"
            >
              <button
                class="button secondary film-form__actions__reset"
                type="button"
              >
                reset
              </button>
              <button
                class="button film-form__actions__submit"
                type="button"
              >
                save
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="film-form"
    >
      <div
        class="modal-window__overlay"
      />
      <div
        class="modal-window"
      >
        <div
          class="modal-window__wrapper "
        >
          <h1
            class="modal-window__title"
          >
            Add film
          </h1>
          <button
            class="close-button modal-window__close large"
            type="button"
          >
            Close
          </button>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-title"
            >
              Title
              <input
                id="film-title"
                name="title"
                type="text"
                value=""
              />
            </label>
            <p
              class="labeled-input__error"
            >
              Title is required field
            </p>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-release"
            >
              Release date
              <input
                id="film-release"
                name="release_date"
                type="date"
                value=""
              />
            </label>
            <p
              class="labeled-input__error"
            >
              Release date is required field
            </p>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-url"
            >
              Movie url
              <input
                id="film-url"
                name="poster_path"
                type="url"
                value=""
              />
            </label>
            <p
              class="labeled-input__error"
            >
              Poster should be a valid url
            </p>
          </div>
          <label
            class="genres"
            for="genres"
          >
            genres
            <div
              class="go2139093995 multi-select"
            >
              <div
                aria-expanded="false"
                aria-readonly="true"
                class="go2646822163 dropdown-container"
                tabindex="0"
              >
                <div
                  class="go2642161244 dropdown-heading"
                >
                  <div
                    class="dropdown-heading-value"
                  >
                    <span
                      class="gray"
                    >
                      Select...
                    </span>
                  </div>
                  <svg
                    class="dropdown-heading-dropdown-arrow gray"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-width="2"
                    width="24"
                  >
                    <path
                      d="M6 9L12 15 18 9"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <p
              class="genres__error"
            >
              genres field must have at least 1 items
            </p>
          </label>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-overview"
            >
              Overview
              <input
                id="film-overview"
                name="overview"
                type="text"
                value=""
              />
            </label>
            <p
              class="labeled-input__error"
            >
              Film description is required
            </p>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-runtime"
            >
              Runtime
              <input
                id="film-runtime"
                name="runtime"
                type="number"
                value=""
              />
            </label>
            <p
              class="labeled-input__error"
            >
              Runtime should be numeric value more then 0
            </p>
          </div>
          <div
            class="film-form__actions"
          >
            <button
              class="button secondary film-form__actions__reset"
              type="button"
            >
              reset
            </button>
            <button
              class="button film-form__actions__submit"
              type="button"
            >
              save
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilmForm when all fields are populated then onReset clicked then values resetted 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="film-form"
      >
        <div
          class="modal-window__overlay"
        />
        <div
          class="modal-window"
        >
          <div
            class="modal-window__wrapper "
          >
            <h1
              class="modal-window__title"
            >
              Add film
            </h1>
            <button
              class="close-button modal-window__close large"
              type="button"
            >
              Close
            </button>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-title"
              >
                Title
                <input
                  id="film-title"
                  name="title"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-release"
              >
                Release date
                <input
                  id="film-release"
                  name="release_date"
                  type="date"
                  value=""
                />
              </label>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-url"
              >
                Movie url
                <input
                  id="film-url"
                  name="poster_path"
                  type="url"
                  value=""
                />
              </label>
            </div>
            <label
              class="genres"
              for="genres"
            >
              genres
              <div
                class="go2139093995 multi-select"
              >
                <div
                  aria-expanded="false"
                  aria-readonly="true"
                  class="go2646822163 dropdown-container"
                  tabindex="0"
                >
                  <div
                    class="go2642161244 dropdown-heading"
                  >
                    <div
                      class="dropdown-heading-value"
                    >
                      <span>
                        All items are selected.
                      </span>
                    </div>
                    <svg
                      class="dropdown-heading-dropdown-arrow gray"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-width="2"
                      width="24"
                    >
                      <path
                        d="M6 9L12 15 18 9"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </label>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-overview"
              >
                Overview
                <input
                  id="film-overview"
                  name="overview"
                  type="text"
                  value=""
                />
              </label>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-runtime"
              >
                Runtime
                <input
                  id="film-runtime"
                  name="runtime"
                  type="number"
                  value=""
                />
              </label>
            </div>
            <div
              class="film-form__actions"
            >
              <button
                class="button secondary film-form__actions__reset"
                type="button"
              >
                reset
              </button>
              <button
                class="button film-form__actions__submit"
                type="button"
              >
                save
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="film-form"
    >
      <div
        class="modal-window__overlay"
      />
      <div
        class="modal-window"
      >
        <div
          class="modal-window__wrapper "
        >
          <h1
            class="modal-window__title"
          >
            Add film
          </h1>
          <button
            class="close-button modal-window__close large"
            type="button"
          >
            Close
          </button>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-title"
            >
              Title
              <input
                id="film-title"
                name="title"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-release"
            >
              Release date
              <input
                id="film-release"
                name="release_date"
                type="date"
                value=""
              />
            </label>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-url"
            >
              Movie url
              <input
                id="film-url"
                name="poster_path"
                type="url"
                value=""
              />
            </label>
          </div>
          <label
            class="genres"
            for="genres"
          >
            genres
            <div
              class="go2139093995 multi-select"
            >
              <div
                aria-expanded="false"
                aria-readonly="true"
                class="go2646822163 dropdown-container"
                tabindex="0"
              >
                <div
                  class="go2642161244 dropdown-heading"
                >
                  <div
                    class="dropdown-heading-value"
                  >
                    <span>
                      All items are selected.
                    </span>
                  </div>
                  <svg
                    class="dropdown-heading-dropdown-arrow gray"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-width="2"
                    width="24"
                  >
                    <path
                      d="M6 9L12 15 18 9"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </label>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-overview"
            >
              Overview
              <input
                id="film-overview"
                name="overview"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-runtime"
            >
              Runtime
              <input
                id="film-runtime"
                name="runtime"
                type="number"
                value=""
              />
            </label>
          </div>
          <div
            class="film-form__actions"
          >
            <button
              class="button secondary film-form__actions__reset"
              type="button"
            >
              reset
            </button>
            <button
              class="button film-form__actions__submit"
              type="button"
            >
              save
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`FilmForm when all fields are populated then onSubmit is called 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        class="film-form"
      >
        <div
          class="modal-window__overlay"
        />
        <div
          class="modal-window"
        >
          <div
            class="modal-window__wrapper "
          >
            <h1
              class="modal-window__title"
            >
              Add film
            </h1>
            <button
              class="close-button modal-window__close large"
              type="button"
            >
              Close
            </button>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-title"
              >
                Title
                <input
                  id="film-title"
                  name="title"
                  type="text"
                  value="test title"
                />
              </label>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-release"
              >
                Release date
                <input
                  id="film-release"
                  name="release_date"
                  type="date"
                  value="2020-10-30"
                />
              </label>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-url"
              >
                Movie url
                <input
                  id="film-url"
                  name="poster_path"
                  type="url"
                  value="https://example.com"
                />
              </label>
            </div>
            <label
              class="genres"
              for="genres"
            >
              genres
              <div
                class="go2139093995 multi-select"
              >
                <div
                  aria-expanded="false"
                  aria-readonly="true"
                  class="go2646822163 dropdown-container"
                  tabindex="0"
                >
                  <div
                    class="go2642161244 dropdown-heading"
                  >
                    <div
                      class="dropdown-heading-value"
                    >
                      <span>
                        All items are selected.
                      </span>
                    </div>
                    <svg
                      class="dropdown-heading-dropdown-arrow gray"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-width="2"
                      width="24"
                    >
                      <path
                        d="M6 9L12 15 18 9"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </label>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-overview"
              >
                Overview
                <input
                  id="film-overview"
                  name="overview"
                  type="text"
                  value="test description"
                />
              </label>
            </div>
            <div
              class="labeled-input"
            >
              <label
                class="labeled-input__input"
                for="film-runtime"
              >
                Runtime
                <input
                  id="film-runtime"
                  name="runtime"
                  type="number"
                  value="123"
                />
              </label>
            </div>
            <div
              class="film-form__actions"
            >
              <button
                class="button secondary film-form__actions__reset"
                type="button"
              >
                reset
              </button>
              <button
                class="button film-form__actions__submit"
                type="button"
              >
                save
              </button>
            </div>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      class="film-form"
    >
      <div
        class="modal-window__overlay"
      />
      <div
        class="modal-window"
      >
        <div
          class="modal-window__wrapper "
        >
          <h1
            class="modal-window__title"
          >
            Add film
          </h1>
          <button
            class="close-button modal-window__close large"
            type="button"
          >
            Close
          </button>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-title"
            >
              Title
              <input
                id="film-title"
                name="title"
                type="text"
                value="test title"
              />
            </label>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-release"
            >
              Release date
              <input
                id="film-release"
                name="release_date"
                type="date"
                value="2020-10-30"
              />
            </label>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-url"
            >
              Movie url
              <input
                id="film-url"
                name="poster_path"
                type="url"
                value="https://example.com"
              />
            </label>
          </div>
          <label
            class="genres"
            for="genres"
          >
            genres
            <div
              class="go2139093995 multi-select"
            >
              <div
                aria-expanded="false"
                aria-readonly="true"
                class="go2646822163 dropdown-container"
                tabindex="0"
              >
                <div
                  class="go2642161244 dropdown-heading"
                >
                  <div
                    class="dropdown-heading-value"
                  >
                    <span>
                      All items are selected.
                    </span>
                  </div>
                  <svg
                    class="dropdown-heading-dropdown-arrow gray"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-width="2"
                    width="24"
                  >
                    <path
                      d="M6 9L12 15 18 9"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </label>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-overview"
            >
              Overview
              <input
                id="film-overview"
                name="overview"
                type="text"
                value="test description"
              />
            </label>
          </div>
          <div
            class="labeled-input"
          >
            <label
              class="labeled-input__input"
              for="film-runtime"
            >
              Runtime
              <input
                id="film-runtime"
                name="runtime"
                type="number"
                value="123"
              />
            </label>
          </div>
          <div
            class="film-form__actions"
          >
            <button
              class="button secondary film-form__actions__reset"
              type="button"
            >
              reset
            </button>
            <button
              class="button film-form__actions__submit"
              type="button"
            >
              save
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
